# madoc

./: .gitignore  01 Limitations.md  LICENSE.md  README.md  __base64demo.md  documentation.madoc.html  madoc_build.sh  main.py  pyproject.toml  requirements.txt  setup.py
.deprecated/: setup.py
.github/: copilot-instructions.md
madoc/: base64_converter.py  documentation.madoc.html  loader.py  madoc.py  madoc_recursive.py  main.py  utils.py
madoc/bookbinding/: entrypoint.py
madoc/ressources/: documentation.madoc.html  index.html
madoc/silly_engine/: logger.py  text_tools.py
madoc/templates/: end.html.tpl  start.html.tpl
madoc/templates/madoc/: _recursive_menu.html  bookbinding.html  logo64.html  madoc_style.css  recursive_index.html  recursive_render.html  render.html  xrender.html
ressources/: index.html
templates/: start.html.tpl
tests/: test_bookbinding.py  test_main.py
